fix: Code Style & Struct